<resources>
    <string name="app_name">坤坤叫声只因</string>
    <string name="kunkun">坤坤叫声只因-V2.5.3</string>
    <string name="ji">鸡</string>
    <string name='ni'>你</string>
    <string name='tai'>太</string>
    <string name="mei">美</string>
    <string name='jinitamei'>鸡你太美</string>
    <string name="chang">唱跳rap篮球</string>
    <string name="pic">制作和剪辑不易</string>
    <string name="show">By 梦醒孤漠吃花卷</string>
    <string name="show1">抖音号：CZ8906</string>
    <string name="show2">CSDN/B站/微信视频号:
    梦醒孤漠吃花卷</string>
    <string name="show3">温馨提示：坤坤音频声音较小，请将手机音量放大</string>
    <string name="code">项目已开源至GitHub</string>
    <string name="url">点击跳转</string>
</resources>