<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="196dp"
        android:layout_height="321dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="38dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/index1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="343dp"
        android:layout_height="38dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="673dp"
        android:text="@string/kunkun"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="131dp"
        android:layout_height="66dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="229dp"
        android:layout_marginBottom="249dp"
        android:onClick="ji"
        android:text="@string/ji"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="131dp"
        android:layout_height="66dp"
        android:layout_marginStart="253dp"
        android:layout_marginTop="418dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="248dp"
        android:onClick="ni"
        android:text="@string/ni"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button5"
        android:layout_width="131dp"
        android:layout_height="66dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="507dp"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="159dp"
        android:onClick="tai"
        android:text="@string/tai"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button6"
        android:layout_width="131dp"
        android:layout_height="66dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="506dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="159dp"
        android:onClick="mei"
        android:text="@string/mei"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button7"
        android:layout_width="171dp"
        android:layout_height="54dp"
        android:layout_marginTop="593dp"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="56dp"
        android:onClick="jinitaimei"
        android:text="@string/jinitamei"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button8"
        android:layout_width="171dp"
        android:layout_height="54dp"
        android:layout_marginStart="221dp"
        android:layout_marginTop="605dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="72dp"
        android:onClick="sing"
        android:text="@string/chang"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="145dp"
        android:layout_height="27dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="600dp"
        android:text="@string/pic"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="162dp"
        android:layout_height="59dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="520dp"
        android:text="@string/show"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="680dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="16dp"
        android:text="@string/code"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="137dp"
        android:layout_height="46dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="677dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="8dp"
        android:onClick="url"
        android:text="@string/url"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="171dp"
        android:layout_height="133dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="234dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="364dp"
        android:text="@string/show2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>